[2093] feat: add debug-bundle API to vpwned (#2090)
