# pkg/vpwned/api/proto/v1/service/api_grpc.pb.go
@@ -11,6 +11,7 @@ package service
 
 import (
 	context "context"
+	httpbody "google.golang.org/genproto/googleapis/api/httpbody"
 	grpc "google.golang.org/grpc"
 	codes "google.golang.org/grpc/codes"
 	status "google.golang.org/grpc/status"
@@ -941,6 +942,7 @@ const (
 	VailbreakProxy_InjectEnvVariables_FullMethodName              = "/api.VailbreakProxy/InjectEnvVariables"
 	VailbreakProxy_ApplyTimeSettings_FullMethodName               = "/api.VailbreakProxy/ApplyTimeSettings"
 	VailbreakProxy_CheckNetworkSubnetCompatibility_FullMethodName = "/api.VailbreakProxy/CheckNetworkSubnetCompatibility"
+	VailbreakProxy_GetDebugBundle_FullMethodName                  = "/api.VailbreakProxy/GetDebugBundle"
 )
 
 // VailbreakProxyClient is the client API for VailbreakProxy service.
@@ -952,6 +954,10 @@ type VailbreakProxyClient interface {
 	InjectEnvVariables(ctx context.Context, in *InjectEnvVariablesRequest, opts ...grpc.CallOption) (*InjectEnvVariablesResponse, error)
 	ApplyTimeSettings(ctx context.Context, in *ApplyTimeSettingsRequest, opts ...grpc.CallOption) (*ApplyTimeSettingsResponse, error)
 	CheckNetworkSubnetCompatibility(ctx context.Context, in *CheckNetworkSubnetCompatibilityRequest, opts ...grpc.CallOption) (*CheckNetworkSubnetCompatibilityResponse, error)
+	// GetDebugBundle returns a downloadable plain-text debug bundle for a
+	// migration: pod stdout/stderr logs, related Kubernetes resource YAMLs
+	// and debug logs from /var/log/pf9.
+	GetDebugBundle(ctx context.Context, in *GetDebugBundleRequest, opts ...grpc.CallOption) (*httpbody.HttpBody, error)
 }
 
 type vailbreakProxyClient struct {
@@ -1012,6 +1018,16 @@ func (c *vailbreakProxyClient) CheckNetworkSubnetCompatibility(ctx context.Conte
 	return out, nil
 }
 
+func (c *vailbreakProxyClient) GetDebugBundle(ctx context.Context, in *GetDebugBundleRequest, opts ...grpc.CallOption) (*httpbody.HttpBody, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(httpbody.HttpBody)
+	err := c.cc.Invoke(ctx, VailbreakProxy_GetDebugBundle_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // VailbreakProxyServer is the server API for VailbreakProxy service.
 // All implementations must embed UnimplementedVailbreakProxyServer
 // for forward compatibility.
@@ -1021,6 +1037,10 @@ type VailbreakProxyServer interface {
 	InjectEnvVariables(context.Context, *InjectEnvVariablesRequest) (*InjectEnvVariablesResponse, error)
 	ApplyTimeSettings(context.Context, *ApplyTimeSettingsRequest) (*ApplyTimeSettingsResponse, error)
 	CheckNetworkSubnetCompatibility(context.Context, *CheckNetworkSubnetCompatibilityRequest) (*CheckNetworkSubnetCompatibilityResponse, error)
+	// GetDebugBundle returns a downloadable plain-text debug bundle for a
+	// migration: pod stdout/stderr logs, related Kubernetes resource YAMLs
+	// and debug logs from /var/log/pf9.
+	GetDebugBundle(context.Context, *GetDebugBundleRequest) (*httpbody.HttpBody, error)
 	mustEmbedUnimplementedVailbreakProxyServer()
 }
 
@@ -1045,6 +1065,9 @@ func (UnimplementedVailbreakProxyServer) ApplyTimeSettings(context.Context, *App
 }
 func (UnimplementedVailbreakProxyServer) CheckNetworkSubnetCompatibility(context.Context, *CheckNetworkSubnetCompatibilityRequest) (*CheckNetworkSubnetCompatibilityResponse, error) {
 	return nil, status.Error(codes.Unimplemented, "method CheckNetworkSubnetCompatibility not implemented")
+}
+func (UnimplementedVailbreakProxyServer) GetDebugBundle(context.Context, *GetDebugBundleRequest) (*httpbody.HttpBody, error) {
+	return nil, status.Error(codes.Unimplemented, "method GetDebugBundle not implemented")
 }
 func (UnimplementedVailbreakProxyServer) mustEmbedUnimplementedVailbreakProxyServer() {}
 func (UnimplementedVailbreakProxyServer) testEmbeddedByValue()                        {}
@@ -1157,6 +1180,24 @@ func _VailbreakProxy_CheckNetworkSubnetCompatibility_Handler(srv interface{}, ct
 	return interceptor(ctx, in, info, handler)
 }
 
+func _VailbreakProxy_GetDebugBundle_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetDebugBundleRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(VailbreakProxyServer).GetDebugBundle(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: VailbreakProxy_GetDebugBundle_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(VailbreakProxyServer).GetDebugBundle(ctx, req.(*GetDebugBundleRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // VailbreakProxy_ServiceDesc is the grpc.ServiceDesc for VailbreakProxy service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -1183,6 +1224,10 @@ var VailbreakProxy_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "CheckNetworkSubnetCompatibility",
 			Handler:    _VailbreakProxy_CheckNetworkSubnetCompatibility_Handler,
+		},
+		{
+			MethodName: "GetDebugBundle",
+			Handler:    _VailbreakProxy_GetDebugBundle_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
